@startuml

title __LOGIN's Class Diagram__\n

  namespace com.vale.warehouses.ui.login {
    class LoginActivity {
      + onCreate()
      + openLeaseRequest()
      - showLoginFailed()
      - updateUiWithUser()
    }

    class LoginFormState {
      - isDataValid : boolean
      - passwordError : Integer
      - usernameError : Integer
      + LoginFormState()
      + LoginFormState()
      ~ getPasswordError()
      ~ getUsernameError()
      ~ isDataValid()
    }

    class LoginResult {
      - error : Integer
      + LoginResult()
      + LoginResult()
      ~ getError()
      ~ getSuccess()
    }
  }
  

  com.vale.warehouses.ui.login.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.vale.warehouses.ui.login.LoginActivity o-- com.vale.warehouses.service.view_model.LoginViewModel : loginViewModel
  com.vale.warehouses.ui.login.LoginResult o-- com.vale.warehouses.service.model.Token : success


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
